<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6cec8a"
    tools:context=".challenge"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.CardView

        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:animationCache="true"
        android:background="#4caf50"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="5dp"
        android:paddingBottom="0dp"
        app:cardCornerRadius="@dimen/activity_horizontal_margin"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <android.support.v7.widget.ContentFrameLayout
            android:id="@+id/problemfragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </android.support.v7.widget.ContentFrameLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/secretscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="@+id/totalAttempts"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/normLives"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="@+id/secretscore"
        app:layout_constraintTop_toBottomOf="@+id/secretscore" />

    <TextView
        android:id="@+id/totalAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="9dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/secretscore"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="5dp"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="@+id/secretscore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Lives"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/Lives"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="@+id/lives"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lives" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="2dp"
        android:text="@string/attempt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/totalAttempts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/round"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/roundNum"
        android:layout_width="11dp"
        android:layout_height="21dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="33dp"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="6dp"
        android:text="quit"
        app:layout_constraintBottom_toTopOf="@+id/lives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/secretscore" />
</android.support.constraint.ConstraintLayout>